--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,11 @@ img {
 
 /*----------container-----------*/
 
-/*===========Main-page==========*/
+/*
+################
+               main page 
+################
+*/
 /*++++++++++header++++++++++*/
 
 .header {
@@ -100,10 +104,12 @@ img {
 .address-list {
     display:flex;
     margin-left:auto;
+    gap:50px;
     
 }
 .nav-list {
     display: flex;
+    gap:50px;
 }
 /*----------header-flex-----------*/
 
@@ -111,7 +117,7 @@ img {
 .nav-link,
  .address-link {
     display:block;
-    padding: 32px;
+    padding: 32px 0;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -153,19 +159,17 @@ img {
     margin-left:auto;
     margin-right:auto;
     background-color: var(--color-blue-section);
+    
+    text-align:center; /*to center a button. Button is inline-block, and can be aligned by  */
 }
 
 
-.hero-block {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
 
-}
 
 .hero-title {
-    width:600px;
-    
+    width:696px;    /*to transfer correctly text to new line*/
+    margin:0 auto; /*to center h1 inside hero block. In block elements text auto-aligned to left side*/
+    margin-bottom:30px;
 
     font-weight: 900;
     font-size: 44px;
@@ -178,8 +182,8 @@ img {
 
 .hero-button {
 
-    height: 50px;
-    width: 216px;
+    min-height: 50px;   /*so a button changes size if we type more text*/
+    min-width: 216px;
     border: none;
     border-radius: 4px;
 
@@ -235,7 +239,7 @@ img {
 /*++++++++++about-us++++++++++*/
 
 .about-us {
-   
+   padding-top:0;
 }
 
 .about-us-header {
@@ -282,12 +286,14 @@ background-color:#F5F4FA;
 
 .our-team-item {
     text-align: center;
-    background-color:url(4853.jpg);
-    border-radius: 0px;
+    background-color:#FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team-wrapper {
     padding:30px 0;
+    
 }
 
 .our-team-name {
@@ -351,7 +357,12 @@ background-color:#F5F4FA;
     color:var(--color-white-text);
 }
 
-.footer-item:first-child {
+/*.footer-item:first-child {
+    margin-bottom: 9px;}
+    Gives margin-bottom only to 1st element. 
+    If more "a" are added  - they won't have margin*/
+
+.footer-item:not(:last-child) {
     margin-bottom:9px;
 }
 
@@ -369,7 +380,9 @@ background-color:#F5F4FA;
 
 /*++++++++++portfolio-cards++++++++++*/
 
+
 .portfolio-wrapper {
+    
     padding: 20px 24px;
     border: 1px solid #EEEEEE;
     border-top:none;
